--- a/src/index.css
+++ b/src/index.css
@@ -23,13 +23,11 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  width: 100%;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
