--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+  color: #000;
   cursor: pointer;
   transition: border-color 0.25s;
 }
